hotfix: fix overflowing text when file path is too long in changeset's code popup

--- a/app/style/_code_file.scss
+++ b/app/style/_code_file.scss
@@ -265,6 +265,17 @@
 }
 
 .token-details {
+	&.token-details-review {
+		i.file-path {
+			display: inline-block;
+			text-overflow: ellipsis;
+			overflow: hidden;
+			white-space: nowrap;
+			width: 355px;
+			vertical-align: -4px;
+		}
+	}
+
 	overflow: hidden;
 
 	&.closed {
